Added fonts, basic design in foodsvilla page

--- a/foodsvilla/index.html
+++ b/foodsvilla/index.html
@@ -10,9 +10,10 @@
 
 <body>
     <div class="mainpage-cover-image">
-        <p class="welcome-text">
-            Welcome to <span style="font-family: cursive;">FoodsVilla</span> 
-        </p>
+        <img src="res/images/logo.jpeg" alt="" class="logo">
+        <div class="welcome-textbox">
+            <h1 class="welcome-textbox-text">Welcome to FoodsVilla!</h1> 
+        </div>
     </div>
 </body>
 
